# ai_recruiting_agent

./: .env  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml
backend/: .coverage  Dockerfile  pyproject.toml  test.db
backend/migrations/: env.py
backend/migrations/versions/: 036a0e5a21eb_sprint6_feedback.py  8f10b7d34199_sprint3_schema.py  98216ddc392b_sprint5_embeddings.py  a72b2d529042_initial_migration.py  e0780876c1da_create_tables.py  f4bad869437e_sprint4_schema_metrics.py
backend/src/: main.py
backend/src/application/agents/: interfaces.py
backend/src/application/coordination/: interfaces.py
backend/src/application/jobs/: agent_jobs.py  analytics_job.py  coordination_jobs.py  memory_jobs.py  organization_jobs.py  resume_extraction.py  tool_jobs.py
backend/src/application/kernel/: interfaces.py
backend/src/application/organization/: interfaces.py
backend/src/application/schemas/: evaluation.py  extraction.py
backend/src/application/services/: candidate_service.py  document_service.py  evaluation.py  (+9 more)
backend/src/domain/: agent_events.py  agent_models.py  coordination_events.py  coordination_models.py  entities.py  enums.py  events.py  exceptions.py  knowledge_models.py  memory_models.py  organization_events.py  organization_models.py  tool_events.py  tool_models.py  workflow_events.py
backend/src/observability/: logging.py  metrics.py  tracing.py
backend/tests/: conftest.py  test_api.py  test_extraction.py  test_extraction_workflow.py  test_providers.py  test_services.py  test_validation_evaluation.py
(+197 files in other folders)
