[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "greenlet>=3.2.5",
    "jsonschema>=4.21.1",
    "langchain-core>=0.3.86",
    "langgraph>=0.6.11",
    "langsmith>=0.4.37",
    "mcp>=1.0.0",
    "openai>=2.43.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "structlog>=25.5.0",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
]
